// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color 1`] = `
Object {
  "component": <input
    className="a b c d e f g h i j k l m n o p q r"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{border-bottom-width:0}
    .e{border-left-width:0}
    .f{border-right-width:0}
    .g{border-top-width:0}
    .h{padding-bottom:0}
    .i{padding-left:0}
    .j{padding-right:0}
    .k{padding-top:0}
    .l{color:blue}
    .m{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .n{font-size:16}
    .o{line-height:24px}
    .p::placeholder{color:rgba(0, 0, 255, 0.5)}
    .q{background-color:transparent}
    .r{outline:none}",
}
`;

exports[`disabled 1`] = `
Object {
  "component": <input
    className="a b c d e f g h i j k l m n o p q r s"
    disabled={true}
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{border-bottom-width:0}
    .e{border-left-width:0}
    .f{border-right-width:0}
    .g{border-top-width:0}
    .h{padding-bottom:0}
    .i{padding-left:0}
    .j{padding-right:0}
    .k{padding-top:0}
    .l{opacity:0.5}
    .m{color:black}
    .n{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .o{font-size:16}
    .p{line-height:24px}
    .q::placeholder{color:rgba(0, 0, 0, 0.5)}
    .r{background-color:transparent}
    .s{outline:none}",
}
`;

exports[`render 1`] = `
Object {
  "component": <input
    className="a b c d e f g h i j k l m n o p q r"
/>,
  "fela": "
    .a{display:inline}
    .b{flex-direction:column}
    .c{position:relative}
    .d{border-bottom-width:0}
    .e{border-left-width:0}
    .f{border-right-width:0}
    .g{border-top-width:0}
    .h{padding-bottom:0}
    .i{padding-left:0}
    .j{padding-right:0}
    .k{padding-top:0}
    .l{color:black}
    .m{font-family:-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, \\"Helvetica Neue\\", Arial, sans-serif}
    .n{font-size:16}
    .o{line-height:24px}
    .p::placeholder{color:rgba(0, 0, 0, 0.5)}
    .q{background-color:transparent}
    .r{outline:none}",
}
`;
